fixed about image width sizing issue on safari

--- a/src/app/about/About.module.css
+++ b/src/app/about/About.module.css
@@ -41,7 +41,7 @@
 
 .container .imageContainer img {
     height: 100% !important;
-    width: 100% !important;
+    width: auto !important;
     max-height: 500px;
 
 }
